# Masters-Thesis-Sample

./: .gitignore  Program_Calendar.docx  README.md  pyproject.toml
notebooks/: Generate_Prompt_Datasets.ipynb  Generate_Stories.ipynb  Generate_Stories_ROCStories.ipynb  Generate_Stories_ROCStories_GPT3.ipynb  Story_Evaluation.ipynb
notebooks/Outline_Generation/: KeyPhrase_Extraction_Examples.ipynb  Summary_Generation.ipynb  Summrarization_Extractive.ipynb
notebooks/Prompt_Examples/: Prompt_Examples_babbage.ipynb  Prompt_Examples_bloom_1B7.ipynb  Prompt_Examples_bloomz_1B7.ipynb  Prompt_Examples_curie.ipynb  Prompt_Examples_gpt_neo_1B3.ipynb  Prompt_Examples_gpt_neo_2B7.ipynb
potential_topics/: README.md
stage_1_topic_selection/: Topic+Selection+Research.xlsx  Topic+Submission+Form.docx
stage_1_topic_selection/drafts/: Topic Descriptions.docx  Topic+Selection+Research_draft.xlsx  Topic+Selection+Research_draft_v2.xlsx  Topic+Submission+Form_draft_v2.docx  Topic+Submission+Form_draft_v3.docx
stage_2_research_proposal/: ProjectPlanner_v1.xlsx  Prompting - Text Generation.xml  Research_Proposal_draft_v1.docx  Research_Proposal_draft_v1.md  Research_Proposal_draft_v2.docx  Research_Proposal_draft_v3.docx  Research_Proposal_draft_v4.docx
stage_3_interim_report/: E2E.drawio  Feedback_Response+Sheet_Interim.xlsx  Interim_Report_draft_v2.docx
stage_4_final_report/: Feedback_Response_Sheet.xlsx  Final_Report _Presentation_final.pptx  Final_Report_draft_final.docx
